hedgedoc/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hedgedoc
  namespace: hedgedoc
  labels:
    app: hedgedoc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hedgedoc
  template:
    metadata:
      labels:
        app: hedgedoc
    spec:
      containers:
        - name: hedgedoc
          image: quay.io/hedgedoc/hedgedoc:latest
          ports:

            - containerPort: 3000
              name: http
