hedgedoc/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hedgedoc
  namespace: hedgedoc
spec:
  selector:
    app: hedgedoc
  ports:
    - name: http
      port: 3000
      targetPort: http
